--- a/src/qa/1.md
+++ b/src/qa/1.md
@@ -10,3 +10,38 @@
 
 # 如果获取文件大小失败，会返回0?
 到底是为什么
+
+```json
+{
+    title: '如果获取文件大小失败，会返回0?',
+    description: '测试',
+    head: [
+        ["meta", { name: "keywords", content: "seo优化,网站优化" }]
+    ],
+    title: '如果获取文件大小失败，会返回0?',
+    description: '测试',
+    head: [
+        ["meta", { name: "keywords", content: "seo优化,网站优化" }]
+    ],
+    title: '如果获取文件大小失败，会返回0?',
+    description: '测试',
+    head: [
+        ["meta", { name: "keywords", content: "seo优化,网站优化,seo优化,网站优化seo优化,网站优化seo优化,网站优化" }]
+    ],
+    title: '如果获取文件大小失败，会返回0?',
+    description: '测试',
+    head: [
+        ["meta", { name: "keywords", content: "seo优化,网站优化" }]
+    ],
+    title: '如果获取文件大小失败，会返回0?',
+    description: '测试',
+    head: [
+        ["meta", { name: "keywords", content: "seo优化,网站优化" }]
+    ],
+    title: '如果获取文件大小失败，会返回0?',
+    description: '测试',
+    head: [
+        ["meta", { name: "keywords", content: "seo优化,网站优化" }]
+    ]
+}
+```
