--- a/src/articles/1.md
+++ b/src/articles/1.md
@@ -4,7 +4,7 @@ tag: |
     html
 title: css超出一行展示省略号
 description: 通过使用text-overflow和white-space属性来使文本在一行内显示，超出则加省略号；
-coverImage: /logo.png
+coverImage: /notes/logo.png
 lastUpdated: true
 ---
 
