--- a/src/css/1.md
+++ b/src/css/1.md
@@ -9,7 +9,7 @@
 ---
 
 
-# 超出单行省略号
+## 超出单行省略号
 ```CSS
 .ellipsis {
     overflow: hidden;
@@ -18,7 +18,7 @@
 }
 ```
 
-# 超出多行省略号
+## 超出多行省略号
 <b>webkit内核</b>
 ```CSS
 .introduction {
