--- a/src/css/1.md
+++ b/src/css/1.md
@@ -1,9 +1,9 @@
 ---
 {
-    title: 'css超出容器范围，展示省略号',
+    title: 'css(单行、多行)展示省略号，兼容所有浏览器',
     description: '了解如何使用CSS来处理超出容器范围的内容并展示省略号, 本文探讨了CSS属性和技巧, 帮助您在网页设计中实现优雅的文本截断效果',
     head: [
-        ["meta", { name: "keywords", content: "展示省略号,文本截断,CSS属性,省略号效果,网页设计技巧" }]
+        ["meta", { name: "keywords", content: "省略号,文本截断,CSS属性,省略号效果,网页设计技巧" }]
     ]
 }
 ---
